--- a/index.html
+++ b/index.html
@@ -4,12 +4,21 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
-  <body>
+  <body class="body">
     <header class="header">
-      <a href="./index.html">WebStudio</a>
+      <a class="logo-link" href="./index.html"
+        >Web <span class="logo-link-span">Studio</span></a
+      >
       <nav class="nav">
-        <ul class="list">
+        <ul class="header-link">
           <li class="item">
             <a class="link" href="#">Студія</a>
           </li>
@@ -21,41 +30,47 @@
           </li>
         </ul>
       </nav>
-      <ul class="header-group">
-        <li><a href="email:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:380961111111">+38 096 111 11 11</a></li>
+      <ul class="header-group-link">
+        <li>
+          <a class="link" href="email:info@devstudio.com">info@devstudio.com</a>
+        </li>
+        <li><a class="link" href="tel:380961111111">+38 096 111 11 11</a></li>
       </ul>
     </header>
     <main>
       <section class="profile-header">
-        <h1>Ефективні рішення для вашого бізнесу</h1>
-        <button type="button">Замовити послугу</button>
+        <h1 class="profile-header-title">
+          Ефективні рішення для вашого бізнесу
+        </h1>
+        <button class="profile-header-btn" type="button">
+          Замовити послугу
+        </button>
       </section>
       <section class="spesifics">
         <ul>
           <li>
-            <h2>УВАГА ДО ДЕТАЛЕЙ</h2>
-            <p>
+            <h3 class="spesifics-title">УВАГА ДО ДЕТАЛЕЙ</h3>
+            <p class="description">
               Ідейні міркування, і навіть початок повсякденної роботи з
               формування позиції.
             </p>
           </li>
           <li>
-            <h3>ПУНКТУАЛЬНІСТЬ</h3>
-            <p>
+            <h3 class="spesifics-title">ПУНКТУАЛЬНІСТЬ</h3>
+            <p class="description">
               Завдання організації, особливо рамки і місце навчання кадрів тягне
               у себе.
             </p>
           </li>
           <li>
-            <h4>ПЛАНУВАННЯ</h4>
-            <p>
+            <h3 class="spesifics-title">ПЛАНУВАННЯ</h3>
+            <p class="description">
               Так само консультація з широким активом значною мірою зумовлює.
             </p>
           </li>
           <li>
-            <h5>СУЧАСНІ ТЕХНОЛОГІЇ</h5>
-            <p>
+            <h3 class="spesifics-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+            <p class="description">
               Значимість цих проблем настільки очевидна, що реалізація планових
               завдань.
             </p>
@@ -63,7 +78,7 @@
         </ul>
       </section>
       <section class="provide">
-        <h2>Чим ми займаємося</h2>
+        <h2 class="provide-title">Чим ми займаємося</h2>
         <ul class="list">
           <li class="item">
             <img
@@ -95,7 +110,7 @@
         </ul>
       </section>
       <section class="team">
-        <h2>Наша команда</h2>
+        <h2 class="main-team-title">Наша команда</h2>
         <ul>
           <li>
             <img
@@ -104,8 +119,8 @@
               width="270"
               height="260"
             />
-            <h3>Ігор Дем'яненко</h3>
-            <p>Product Designer</p>
+            <h3 class="name-title">Ігор Дем'яненко</h3>
+            <p class="text">Product Designer</p>
           </li>
           <li>
             <img
@@ -114,8 +129,8 @@
               width="270"
               height="260"
             />
-            <h4>Ольга Рєпіна</h4>
-            <p>Frontend Developer</p>
+            <h3 class="name-title">Ольга Рєпіна</h3>
+            <p class="text">Frontend Developer</p>
           </li>
           <li>
             <img
@@ -124,8 +139,8 @@
               width="270"
               height="260"
             />
-            <h5>Микола Тарасов</h5>
-            <p>Marketing</p>
+            <h3 class="name-title">Микола Тарасов</h3>
+            <p class="text">Marketing</p>
           </li>
           <li>
             <img
@@ -134,19 +149,25 @@
               width="270"
               height="260"
             />
-            <h6>Михайло Єрмаков</h6>
-            <p>UI Designer</p>
+            <h3 class="name-title">Михайло Єрмаков</h3>
+            <p class="text">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
     <footer class="footer">
-      <a href="./index.html">WebStudio</a>
-      <address>
+      <a class="logo-link" href="./index.html"
+        >Web <span class="logo-link-span">Studio</span></a
+      >
+      <address class="address">
         м. Київ, пр-т Лесі Українки, 26
-        <ul>
-          <li><a href="email:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:380961111111">+38 096 111 11 11</a></li>
+        <ul class="address-list-link">
+          <li>
+            <a class="link" href="email:info@devstudio.com">
+              info@devstudio.com</a
+            >
+          </li>
+          <li><a class="link" href="tel:380961111111">+38 096 111 11 11</a></li>
         </ul>
       </address>
     </footer>
