--- a/index.html
+++ b/index.html
@@ -36,6 +36,12 @@
         </li>
         <li><a class="link" href="tel:380961111111">+38 096 111 11 11</a></li>
       </ul>
+      <ul>
+        <li><a class="head-link" href="./index.html">Home page</a></li>
+        <li>
+          <a class="head-link current" href="./portfolio.html">Portfolio</a>
+        </li>
+      </ul>
     </header>
     <main>
       <section class="profile-header">
