--- a/portfolio.html
+++ b/portfolio.html
@@ -30,13 +30,17 @@
           </li>
         </ul>
       </nav>
-      <ul>
+      <ul class="header-group-link">
         <li>
           <a class="link" href="email:info@devstudio.com">info@devstudio.com</a>
         </li>
         <li>
           <a class="link" href="tel:380961111111">+38 096 111 11 11</a>
         </li>
+      </ul>
+      <ul>
+        <li><a class="head-link current" href="./index.html">Home page</a></li>
+        <li><a class="head-link" href="./portfolio.html">Portfolio</a></li>
       </ul>
     </header>
     <main>
@@ -66,8 +70,8 @@
               width="370"
               height="294"
             />
-            <h3>Технокряк</h3>
-            <p>Веб-сайт</p>
+            <h3 class="portfolio-title">Технокряк</h3>
+            <p class="portfolio-text">Веб-сайт</p>
           </li>
           <li>
             <img
@@ -76,8 +80,8 @@
               width="370"
               height="294"
             />
-            <h3>Постер New Orlean vs Golden Star</h3>
-            <p>Дизайн</p>
+            <h3 class="portfolio-title">Постер New Orlean vs Golden Star</h3>
+            <p class="portfolio-text">Дизайн</p>
           </li>
           <li>
             <img
@@ -86,8 +90,8 @@
               width="370"
               height="294"
             />
-            <h3>Ресторан Seafood</h3>
-            <p>Додаток</p>
+            <h3 class="portfolio-title">Ресторан Seafood</h3>
+            <p class="portfolio-text">Додаток</p>
           </li>
           <li>
             <img
@@ -96,8 +100,8 @@
               width="370"
               height="294"
             />
-            <h3>Проєкт Prime</h3>
-            <p>Маркетинг</p>
+            <h3 class="portfolio-title">Проєкт Prime</h3>
+            <p class="portfolio-text">Маркетинг</p>
           </li>
           <li>
             <img
@@ -106,8 +110,8 @@
               width="370"
               height="294"
             />
-            <h3>Проєкт Boxes</h3>
-            <p>Додаток</p>
+            <h3 class="portfolio-title">Проєкт Boxes</h3>
+            <p class="portfolio-text">Додаток</p>
           </li>
           <li>
             <img
@@ -116,8 +120,8 @@
               width="370"
               height="294"
             />
-            <h3>Inspiration has no Borders</h3>
-            <p>Веб-сайт</p>
+            <h3 class="portfolio-title">Inspiration has no Borders</h3>
+            <p class="portfolio-text">Веб-сайт</p>
           </li>
           <li>
             <img
@@ -126,8 +130,8 @@
               width="370"
               height="294"
             />
-            <h3>Видання Limited Edition</h3>
-            <p>Дизайн</p>
+            <h3 class="portfolio-title">Видання Limited Edition</h3>
+            <p class="portfolio-text">Дизайн</p>
           </li>
           <li>
             <img
@@ -136,8 +140,8 @@
               width="370"
               height="294"
             />
-            <h3>Проєкт LAB</h3>
-            <p>Маркетинг</p>
+            <h3 class="portfolio-title">Проєкт LAB</h3>
+            <p class="portfolio-text">Маркетинг</p>
           </li>
           <li>
             <img
@@ -146,21 +150,23 @@
               width="370"
               height="294"
             />
-            <h3>Growing Business</h3>
-            <p>Додаток</p>
+            <h3 class="portfolio-title">Growing Business</h3>
+            <p class="portfolio-text">Додаток</p>
           </li>
         </ul>
       </section>
     </main>
 
     <footer class="footer">
-      <a href="./index.html">WebStudio</a>
-      <address>
+      <a class="logo-link" href="./index.html"
+        >Web <span class="footer-logo-link-span">Studio</span></a
+      >
+      <address class="address">
         м. Київ, пр-т Лесі Українки, 26
-        <ul>
+        <ul class="address-list-link">
           <li>
-            <a class="link" href="email:info@devstudio.com"
-              >info@devstudio.com</a
+            <a class="link" href="email:info@devstudio.com">
+              info@devstudio.com</a
             >
           </li>
           <li><a class="link" href="tel:380961111111">+38 096 111 11 11</a></li>
