--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
   <body class="body">
     <header class="header">
       <a class="logo-link" href="./index.html"
-        >Web <span class="logo-link-span">Studio</span></a
+        >Web<span class="logo-link-span">Studio</span></a
       >
       <nav class="nav">
         <ul class="header-link">
           <li class="item">
-            <a class="link" href="#">Студія</a>
+            <a class="header-link-current" href="./index.html">Студія</a>
           </li>
           <li class="item">
-            <a class="link" href="#">Портфоліо</a>
+            <a class="header-link" href="./portfolio.html">Портфоліо</a>
           </li>
           <li class="item">
             <a class="link" href="#">Контакти</a>
@@ -36,12 +36,6 @@
         </li>
         <li><a class="link" href="tel:380961111111">+38 096 111 11 11</a></li>
       </ul>
-      <ul>
-        <li><a class="head-link" href="./index.html">Home page</a></li>
-        <li>
-          <a class="head-link current" href="./portfolio.html">Portfolio</a>
-        </li>
-      </ul>
     </header>
     <main>
       <section class="profile-header">
@@ -53,7 +47,7 @@
         </button>
       </section>
       <section class="spesifics">
-        <ul>
+        <ul class="list">
           <li>
             <h3 class="spesifics-title">УВАГА ДО ДЕТАЛЕЙ</h3>
             <p class="description">
@@ -117,7 +111,7 @@
       </section>
       <section class="team">
         <h2 class="main-team-title">Наша команда</h2>
-        <ul>
+        <ul class="list">
           <li>
             <img
               src="./images/team-1.jpg"
@@ -163,7 +157,7 @@
     </main>
     <footer class="footer">
       <a class="logo-link" href="./index.html"
-        >Web <span class="logo-link-span">Studio</span></a
+        >Web<span class="footer-logo-link-span">Studio</span></a
       >
       <address class="address">
         м. Київ, пр-т Лесі Українки, 26
