--- a/portfolio.html
+++ b/portfolio.html
@@ -15,15 +15,15 @@
   <body class="body">
     <header class="header">
       <a class="logo-link" href="./index.html"
-        >Web <span class="logo-link-span">Studio</span></a
+        >Web<span class="logo-link-span">Studio</span></a
       >
       <nav class="nav">
         <ul class="header-link">
           <li class="item">
-            <a class="link" href="#">Студія</a>
+            <a class="header-link" href="./index.html">Студія</a>
           </li>
           <li class="item">
-            <a class="link" href="#">Портфоліо</a>
+            <a class="header-link-current" href="./portfolio.html">Портфоліо</a>
           </li>
           <li class="item">
             <a class="link" href="#">Контакти</a>
@@ -38,16 +38,12 @@
           <a class="link" href="tel:380961111111">+38 096 111 11 11</a>
         </li>
       </ul>
-      <ul>
-        <li><a class="head-link current" href="./index.html">Home page</a></li>
-        <li><a class="head-link" href="./portfolio.html">Portfolio</a></li>
-      </ul>
     </header>
     <main>
       <section class="portfolio-nav">
-        <ul>
+        <ul class="list">
           <li class="item">
-            <button class="btn" type="button">Усі</button>
+            <button class="btn-current" type="button">Усі</button>
           </li>
           <li class="item">
             <button class="btn" type="button">Веб-сайти</button>
@@ -62,7 +58,7 @@
             <button class="btn" type="button">Маркетинг</button>
           </li>
         </ul>
-        <ul>
+        <ul class="list">
           <li>
             <img
               src="./images/portfolio/img-all-1.jpg"
@@ -159,7 +155,7 @@
 
     <footer class="footer">
       <a class="logo-link" href="./index.html"
-        >Web <span class="footer-logo-link-span">Studio</span></a
+        >Web<span class="footer-logo-link-span">Studio</span></a
       >
       <address class="address">
         м. Київ, пр-т Лесі Українки, 26
