--- a/index.html
+++ b/index.html
@@ -163,11 +163,13 @@
         м. Київ, пр-т Лесі Українки, 26
         <ul class="address-list-link">
           <li>
-            <a class="link" href="email:info@devstudio.com">
+            <a class="footer-link" href="email:info@devstudio.com">
               info@devstudio.com</a
             >
           </li>
-          <li><a class="link" href="tel:380961111111">+38 096 111 11 11</a></li>
+          <li>
+            <a class="footer-link" href="tel:380961111111">+38 096 111 11 11</a>
+          </li>
         </ul>
       </address>
     </footer>
