--- a/portfolio.html
+++ b/portfolio.html
@@ -60,94 +60,112 @@
         </ul>
         <ul class="list">
           <li>
-            <img
-              src="./images/portfolio/img-all-1.jpg"
-              alt="11111"
-              width="370"
-              height="294"
-            />
-            <h3 class="portfolio-title">Технокряк</h3>
-            <p class="portfolio-text">Веб-сайт</p>
+            <a class="link" href="button">
+              <img
+                src="./images/portfolio/img-all-1.jpg"
+                alt="11111"
+                width="370"
+                height="294"
+              />
+              <h3 class="portfolio-title">Технокряк</h3>
+              <p class="portfolio-text">Веб-сайт</p>
+            </a>
           </li>
           <li>
-            <img
-              src="./images/portfolio/img-all-2.jpg"
-              alt="11111"
-              width="370"
-              height="294"
-            />
-            <h3 class="portfolio-title">Постер New Orlean vs Golden Star</h3>
-            <p class="portfolio-text">Дизайн</p>
+            <a class="link" href="button">
+              <img
+                src="./images/portfolio/img-all-2.jpg"
+                alt="11111"
+                width="370"
+                height="294"
+              />
+              <h3 class="portfolio-title">Постер New Orlean vs Golden Star</h3>
+              <p class="portfolio-text">Дизайн</p>
+            </a>
           </li>
           <li>
-            <img
-              src="./images/portfolio/img-all-3.jpg"
-              alt="11111"
-              width="370"
-              height="294"
-            />
-            <h3 class="portfolio-title">Ресторан Seafood</h3>
-            <p class="portfolio-text">Додаток</p>
+            <a class="link" href="button">
+              <img
+                src="./images/portfolio/img-all-3.jpg"
+                alt="11111"
+                width="370"
+                height="294"
+              />
+              <h3 class="portfolio-title">Ресторан Seafood</h3>
+              <p class="portfolio-text">Додаток</p>
+            </a>
           </li>
           <li>
-            <img
-              src="./images/portfolio/img-all-4.jpg"
-              alt="11111"
-              width="370"
-              height="294"
-            />
-            <h3 class="portfolio-title">Проєкт Prime</h3>
-            <p class="portfolio-text">Маркетинг</p>
+            <a class="link" href="button">
+              <img
+                src="./images/portfolio/img-all-4.jpg"
+                alt="11111"
+                width="370"
+                height="294"
+              />
+              <h3 class="portfolio-title">Проєкт Prime</h3>
+              <p class="portfolio-text">Маркетинг</p>
+            </a>
           </li>
           <li>
-            <img
-              src="./images/portfolio/img-all-5.jpg"
-              alt="11111"
-              width="370"
-              height="294"
-            />
-            <h3 class="portfolio-title">Проєкт Boxes</h3>
-            <p class="portfolio-text">Додаток</p>
+            <a class="link" href="button">
+              <img
+                src="./images/portfolio/img-all-5.jpg"
+                alt="11111"
+                width="370"
+                height="294"
+              />
+              <h3 class="portfolio-title">Проєкт Boxes</h3>
+              <p class="portfolio-text">Додаток</p>
+            </a>
           </li>
           <li>
-            <img
-              src="./images/portfolio/img-all-6.jpg"
-              alt="11111"
-              width="370"
-              height="294"
-            />
-            <h3 class="portfolio-title">Inspiration has no Borders</h3>
-            <p class="portfolio-text">Веб-сайт</p>
+            <a class="link" href="button">
+              <img
+                src="./images/portfolio/img-all-6.jpg"
+                alt="11111"
+                width="370"
+                height="294"
+              />
+              <h3 class="portfolio-title">Inspiration has no Borders</h3>
+              <p class="portfolio-text">Веб-сайт</p>
+            </a>
           </li>
           <li>
-            <img
-              src="./images/portfolio/img-all-7.jpg"
-              alt="11111"
-              width="370"
-              height="294"
-            />
-            <h3 class="portfolio-title">Видання Limited Edition</h3>
-            <p class="portfolio-text">Дизайн</p>
+            <a class="link" href="button">
+              <img
+                src="./images/portfolio/img-all-7.jpg"
+                alt="11111"
+                width="370"
+                height="294"
+              />
+              <h3 class="portfolio-title">Видання Limited Edition</h3>
+              <p class="portfolio-text">Дизайн</p>
+            </a>
           </li>
           <li>
-            <img
-              src="./images/portfolio/img-all-8.jpg"
-              alt="11111"
-              width="370"
-              height="294"
-            />
-            <h3 class="portfolio-title">Проєкт LAB</h3>
-            <p class="portfolio-text">Маркетинг</p>
+            <a class="link" href="button">
+              <img
+                src="./images/portfolio/img-all-8.jpg"
+                alt="11111"
+                width="370"
+                height="294"
+              />
+              <h3 class="portfolio-title">Проєкт LAB</h3>
+              <p class="portfolio-text">Маркетинг</p>
+            </a>
           </li>
           <li>
-            <img
-              src="./images/portfolio/img-all-9.jpg"
-              alt="11111"
-              width="370"
-              height="294"
-            />
-            <h3 class="portfolio-title">Growing Business</h3>
-            <p class="portfolio-text">Додаток</p>
+            <a class="link" a href="button">
+              <img
+                src="./images/portfolio/img-all-9.jpg"
+                alt="11111"
+                width="370"
+                height="294"
+              />
+              <h3 class="portfolio-title">Growing Business</h3>
+              <p class="portfolio-text">Додаток</p>
+            </a>
           </li>
         </ul>
       </section>
@@ -161,11 +179,13 @@
         м. Київ, пр-т Лесі Українки, 26
         <ul class="address-list-link">
           <li>
-            <a class="link" href="email:info@devstudio.com">
+            <a class="footer-link" href="email:info@devstudio.com">
               info@devstudio.com</a
             >
           </li>
-          <li><a class="link" href="tel:380961111111">+38 096 111 11 11</a></li>
+          <li>
+            <a class="footer-link" href="tel:380961111111">+38 096 111 11 11</a>
+          </li>
         </ul>
       </address>
     </footer>
