--- a/portfolio.html
+++ b/portfolio.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -156,7 +156,7 @@
             </a>
           </li>
           <li>
-            <a class="link" a href="button">
+            <a class="link" href="button">
               <img
                 src="./images/portfolio/img-all-9.jpg"
                 alt="11111"
