--- a/portfolio.html
+++ b/portfolio.html
@@ -10,184 +10,205 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
+      integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body class="body">
     <header class="header">
-      <a class="logo-link" href="./index.html"
-        >Web<span class="logo-link-span">Studio</span></a
-      >
-      <nav class="nav">
-        <ul class="header-link">
-          <li class="item">
-            <a class="header-link" href="./index.html">Студія</a>
+      <div class="container">
+        <a class="logo-link" href="./index.html"
+          >Web<span class="logo-link-span">Studio</span></a
+        >
+        <nav class="nav">
+          <ul class="header-link">
+            <li class="item">
+              <a class="header-link" href="./index.html">Студія</a>
+            </li>
+            <li class="item">
+              <a class="header-link-current" href="./portfolio.html"
+                >Портфоліо</a
+              >
+            </li>
+            <li class="item">
+              <a class="link" href="#">Контакти</a>
+            </li>
+          </ul>
+        </nav>
+        <ul class="header-group-link">
+          <li>
+            <a class="link" href="email:info@devstudio.com"
+              >info@devstudio.com</a
+            >
           </li>
-          <li class="item">
-            <a class="header-link-current" href="./portfolio.html">Портфоліо</a>
-          </li>
-          <li class="item">
-            <a class="link" href="#">Контакти</a>
+          <li>
+            <a class="link" href="tel:380961111111">+38 096 111 11 11</a>
           </li>
         </ul>
-      </nav>
-      <ul class="header-group-link">
-        <li>
-          <a class="link" href="email:info@devstudio.com">info@devstudio.com</a>
-        </li>
-        <li>
-          <a class="link" href="tel:380961111111">+38 096 111 11 11</a>
-        </li>
-      </ul>
+      </div>
     </header>
     <main>
       <section class="portfolio-nav">
-        <ul class="list">
-          <li class="item">
-            <button class="btn-current" type="button">Усі</button>
-          </li>
-          <li class="item">
-            <button class="btn" type="button">Веб-сайти</button>
-          </li>
-          <li class="item">
-            <button class="btn" type="button">Додатки</button>
-          </li>
-          <li class="item">
-            <button class="btn" type="button">Дизайн</button>
-          </li>
-          <li class="item">
-            <button class="btn" type="button">Маркетинг</button>
-          </li>
-        </ul>
-        <ul class="list">
-          <li>
-            <a class="link" href="button">
-              <img
-                src="./images/portfolio/img-all-1.jpg"
-                alt="11111"
-                width="370"
-                height="294"
-              />
-              <h3 class="portfolio-title">Технокряк</h3>
-              <p class="portfolio-text">Веб-сайт</p>
-            </a>
-          </li>
-          <li>
-            <a class="link" href="button">
-              <img
-                src="./images/portfolio/img-all-2.jpg"
-                alt="11111"
-                width="370"
-                height="294"
-              />
-              <h3 class="portfolio-title">Постер New Orlean vs Golden Star</h3>
-              <p class="portfolio-text">Дизайн</p>
-            </a>
-          </li>
-          <li>
-            <a class="link" href="button">
-              <img
-                src="./images/portfolio/img-all-3.jpg"
-                alt="11111"
-                width="370"
-                height="294"
-              />
-              <h3 class="portfolio-title">Ресторан Seafood</h3>
-              <p class="portfolio-text">Додаток</p>
-            </a>
-          </li>
-          <li>
-            <a class="link" href="button">
-              <img
-                src="./images/portfolio/img-all-4.jpg"
-                alt="11111"
-                width="370"
-                height="294"
-              />
-              <h3 class="portfolio-title">Проєкт Prime</h3>
-              <p class="portfolio-text">Маркетинг</p>
-            </a>
-          </li>
-          <li>
-            <a class="link" href="button">
-              <img
-                src="./images/portfolio/img-all-5.jpg"
-                alt="11111"
-                width="370"
-                height="294"
-              />
-              <h3 class="portfolio-title">Проєкт Boxes</h3>
-              <p class="portfolio-text">Додаток</p>
-            </a>
-          </li>
-          <li>
-            <a class="link" href="button">
-              <img
-                src="./images/portfolio/img-all-6.jpg"
-                alt="11111"
-                width="370"
-                height="294"
-              />
-              <h3 class="portfolio-title">Inspiration has no Borders</h3>
-              <p class="portfolio-text">Веб-сайт</p>
-            </a>
-          </li>
-          <li>
-            <a class="link" href="button">
-              <img
-                src="./images/portfolio/img-all-7.jpg"
-                alt="11111"
-                width="370"
-                height="294"
-              />
-              <h3 class="portfolio-title">Видання Limited Edition</h3>
-              <p class="portfolio-text">Дизайн</p>
-            </a>
-          </li>
-          <li>
-            <a class="link" href="button">
-              <img
-                src="./images/portfolio/img-all-8.jpg"
-                alt="11111"
-                width="370"
-                height="294"
-              />
-              <h3 class="portfolio-title">Проєкт LAB</h3>
-              <p class="portfolio-text">Маркетинг</p>
-            </a>
-          </li>
-          <li>
-            <a class="link" href="button">
-              <img
-                src="./images/portfolio/img-all-9.jpg"
-                alt="11111"
-                width="370"
-                height="294"
-              />
-              <h3 class="portfolio-title">Growing Business</h3>
-              <p class="portfolio-text">Додаток</p>
-            </a>
-          </li>
-        </ul>
+        <div class="container">
+          <ul class="list">
+            <li class="item">
+              <button class="btn-current" type="button">Усі</button>
+            </li>
+            <li class="item">
+              <button class="btn" type="button">Веб-сайти</button>
+            </li>
+            <li class="item">
+              <button class="btn" type="button">Додатки</button>
+            </li>
+            <li class="item">
+              <button class="btn" type="button">Дизайн</button>
+            </li>
+            <li class="item">
+              <button class="btn" type="button">Маркетинг</button>
+            </li>
+          </ul>
+          <ul class="list">
+            <li>
+              <a class="link" href="button">
+                <img
+                  src="./images/portfolio/img-all-1.jpg"
+                  alt="11111"
+                  width="370"
+                  height="294"
+                />
+                <h3 class="portfolio-title">Технокряк</h3>
+                <p class="portfolio-text">Веб-сайт</p>
+              </a>
+            </li>
+            <li>
+              <a class="link" href="button">
+                <img
+                  src="./images/portfolio/img-all-2.jpg"
+                  alt="11111"
+                  width="370"
+                  height="294"
+                />
+                <h3 class="portfolio-title">
+                  Постер New Orlean vs Golden Star
+                </h3>
+                <p class="portfolio-text">Дизайн</p>
+              </a>
+            </li>
+            <li>
+              <a class="link" href="button">
+                <img
+                  src="./images/portfolio/img-all-3.jpg"
+                  alt="11111"
+                  width="370"
+                  height="294"
+                />
+                <h3 class="portfolio-title">Ресторан Seafood</h3>
+                <p class="portfolio-text">Додаток</p>
+              </a>
+            </li>
+            <li>
+              <a class="link" href="button">
+                <img
+                  src="./images/portfolio/img-all-4.jpg"
+                  alt="11111"
+                  width="370"
+                  height="294"
+                />
+                <h3 class="portfolio-title">Проєкт Prime</h3>
+                <p class="portfolio-text">Маркетинг</p>
+              </a>
+            </li>
+            <li>
+              <a class="link" href="button">
+                <img
+                  src="./images/portfolio/img-all-5.jpg"
+                  alt="11111"
+                  width="370"
+                  height="294"
+                />
+                <h3 class="portfolio-title">Проєкт Boxes</h3>
+                <p class="portfolio-text">Додаток</p>
+              </a>
+            </li>
+            <li>
+              <a class="link" href="button">
+                <img
+                  src="./images/portfolio/img-all-6.jpg"
+                  alt="11111"
+                  width="370"
+                  height="294"
+                />
+                <h3 class="portfolio-title">Inspiration has no Borders</h3>
+                <p class="portfolio-text">Веб-сайт</p>
+              </a>
+            </li>
+            <li>
+              <a class="link" href="button">
+                <img
+                  src="./images/portfolio/img-all-7.jpg"
+                  alt="11111"
+                  width="370"
+                  height="294"
+                />
+                <h3 class="portfolio-title">Видання Limited Edition</h3>
+                <p class="portfolio-text">Дизайн</p>
+              </a>
+            </li>
+            <li>
+              <a class="link" href="button">
+                <img
+                  src="./images/portfolio/img-all-8.jpg"
+                  alt="11111"
+                  width="370"
+                  height="294"
+                />
+                <h3 class="portfolio-title">Проєкт LAB</h3>
+                <p class="portfolio-text">Маркетинг</p>
+              </a>
+            </li>
+            <li>
+              <a class="link" href="button">
+                <img
+                  src="./images/portfolio/img-all-9.jpg"
+                  alt="11111"
+                  width="370"
+                  height="294"
+                />
+                <h3 class="portfolio-title">Growing Business</h3>
+                <p class="portfolio-text">Додаток</p>
+              </a>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
 
     <footer class="footer">
-      <a class="logo-link" href="./index.html"
-        >Web<span class="footer-logo-link-span">Studio</span></a
-      >
-      <address class="address">
-        м. Київ, пр-т Лесі Українки, 26
-        <ul class="address-list-link">
-          <li>
-            <a class="footer-link" href="email:info@devstudio.com">
-              info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a class="footer-link" href="tel:380961111111">+38 096 111 11 11</a>
-          </li>
-        </ul>
-      </address>
+      <div class="container">
+        <a class="logo-link" href="./index.html"
+          >Web<span class="footer-logo-link-span">Studio</span></a
+        >
+        <address class="address">
+          м. Київ, пр-т Лесі Українки, 26
+          <ul class="address-list-link">
+            <li>
+              <a class="footer-link" href="email:info@devstudio.com">
+                info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a class="footer-link" href="tel:380961111111"
+                >+38 096 111 11 11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
