--- a/portfolio.html
+++ b/portfolio.html
@@ -21,7 +21,7 @@
   </head>
   <body class="body">
     <header class="header">
-      <div class="container">
+      <div class="container header-container">
         <a class="logo-link" href="./index.html"
           >Web<span class="logo-link-span">Studio</span></a
         >
@@ -42,7 +42,7 @@
         </nav>
         <ul class="header-group-link">
           <li>
-            <a class="link" href="email:info@devstudio.com"
+            <a class="link header-email" href="email:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
