--- a/index.html
+++ b/index.html
@@ -58,28 +58,28 @@
       </section>
       <section class="spesifics section">
         <div class="container">
-        <ul class="list">
-          <li>
+        <ul class="list spesifics">
+          <li class="item">
             <h3 class="spesifics-title">УВАГА ДО ДЕТАЛЕЙ</h3>
             <p class="description">
               Ідейні міркування, і навіть початок повсякденної роботи з
               формування позиції.
             </p>
           </li>
-          <li>
+          <li class="item">
             <h3 class="spesifics-title">ПУНКТУАЛЬНІСТЬ</h3>
             <p class="description">
               Завдання організації, особливо рамки і місце навчання кадрів тягне
               у себе.
             </p>
           </li>
-          <li>
+          <li class="item">
             <h3 class="spesifics-title">ПЛАНУВАННЯ</h3>
             <p class="description">
               Так само консультація з широким активом значною мірою зумовлює.
             </p>
           </li>
-          <li>
+          <li class="item">
             <h3 class="spesifics-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
             <p class="description">
               Значимість цих проблем настільки очевидна, що реалізація планових
@@ -92,7 +92,7 @@
         <section class="provide section">
          <div class="container">
         <h2 class="provide-title">Чим ми займаємося</h2>
-        <ul class="list">
+        <ul class="provide list">
           <li class="item">
             <img
               class="provide-img"
@@ -126,8 +126,8 @@
              <section class="team section">
               <div class="container">
         <h2 class="main-team-title">Наша команда</h2>
-        <ul class="list">
-          <li>
+        <ul class="list team">
+          <li  class="item team">
             <img
               src="./images/team-1.jpg"
               alt="Член команди Ігор Дем'яненко спеціальність Product Designer "
@@ -137,7 +137,7 @@
             <h3 class="name-title">Ігор Дем'яненко</h3>
             <p class="text">Product Designer</p>
           </li>
-          <li>
+          <li  class="item team">
             <img
               src="./images/team-2.jpg"
               alt="Член команди Ольга Рєпіна спеціальність Frontend Developer"
@@ -147,7 +147,7 @@
             <h3 class="name-title">Ольга Рєпіна</h3>
             <p class="text">Frontend Developer</p>
           </li>
-          <li>
+          <li class="item team">
             <img
               src="./images/team-3.jpg"
               alt="Член команди Микола Тарасов спеціальність Marketing"
@@ -157,7 +157,7 @@
             <h3 class="name-title">Микола Тарасов</h3>
             <p class="text">Marketing</p>
           </li>
-          <li>
+          <li  class="item team">
             <img
               src="./images/team-4.jpg"
               alt="Член команди Михайло Єрмаков спеціальність UI Designer"
@@ -174,15 +174,11 @@
     <footer class="footer">
       <div class="container">
         <a class="logo-link" href="./index.html"
-        >Web<span class="footer-logo-link-span">Studio</span></a
-      >
-      <address class="address">
-        м. Київ, пр-т Лесі Українки, 26
-        <ul class="address-list-link">
+        >Web<span class="footer-logo-link-span">Studio</span></a>
+      <address class="address">м. Київ, пр-т Лесі Українки, 26
+                <ul class="address-list-link">
           <li>
-            <a class="footer-link" href="email:info@devstudio.com">
-              info@devstudio.com</a
-            >
+            <a class="footer-link" href="email:info@devstudio.com">info@devstudio.com</a>
           </li>
           <li>
             <a class="footer-link" href="tel:380961111111">+38 096 111 11 11</a>
