--- a/portfolio.html
+++ b/portfolio.html
@@ -55,26 +55,26 @@
     <main>
       <section class="portfolio-nav">
         <div class="container">
-          <ul class="list">
+          <ul class="list nav">
             <li class="item">
-              <button class="btn-current" type="button">Усі</button>
+              <button class="btn current nav" type="button">Усі</button>
             </li>
             <li class="item">
-              <button class="btn" type="button">Веб-сайти</button>
+              <button class="btn nav" type="button">Веб-сайти</button>
             </li>
             <li class="item">
-              <button class="btn" type="button">Додатки</button>
+              <button class="btn nav" type="button">Додатки</button>
             </li>
             <li class="item">
-              <button class="btn" type="button">Дизайн</button>
+              <button class="btn nav" type="button">Дизайн</button>
             </li>
             <li class="item">
-              <button class="btn" type="button">Маркетинг</button>
+              <button class="btn nav" type="button">Маркетинг</button>
             </li>
           </ul>
-          <ul class="list">
-            <li>
-              <a class="link" href="button">
+          <ul class="list portfolio">
+            <li class="list-item portfolio">
+              <a class="link portfolio" href="button">
                 <img
                   src="./images/portfolio/img-all-1.jpg"
                   alt="11111"
@@ -85,8 +85,8 @@
                 <p class="portfolio-text">Веб-сайт</p>
               </a>
             </li>
-            <li>
-              <a class="link" href="button">
+            <li class="list-item portfolio">
+              <a class="link portfolio" href="button">
                 <img
                   src="./images/portfolio/img-all-2.jpg"
                   alt="11111"
@@ -99,8 +99,8 @@
                 <p class="portfolio-text">Дизайн</p>
               </a>
             </li>
-            <li>
-              <a class="link" href="button">
+            <li class="list-item portfolio">
+              <a class="link portfolio" href="button">
                 <img
                   src="./images/portfolio/img-all-3.jpg"
                   alt="11111"
@@ -111,8 +111,8 @@
                 <p class="portfolio-text">Додаток</p>
               </a>
             </li>
-            <li>
-              <a class="link" href="button">
+            <li class="list-item portfolio">
+              <a class="link portfolio" href="button">
                 <img
                   src="./images/portfolio/img-all-4.jpg"
                   alt="11111"
@@ -123,8 +123,8 @@
                 <p class="portfolio-text">Маркетинг</p>
               </a>
             </li>
-            <li>
-              <a class="link" href="button">
+            <li class="list-item portfolio">
+              <a class="link portfolio" href="button">
                 <img
                   src="./images/portfolio/img-all-5.jpg"
                   alt="11111"
@@ -135,8 +135,8 @@
                 <p class="portfolio-text">Додаток</p>
               </a>
             </li>
-            <li>
-              <a class="link" href="button">
+            <li class="list-item portfolio">
+              <a class="link portfolio" href="button">
                 <img
                   src="./images/portfolio/img-all-6.jpg"
                   alt="11111"
@@ -147,8 +147,8 @@
                 <p class="portfolio-text">Веб-сайт</p>
               </a>
             </li>
-            <li>
-              <a class="link" href="button">
+            <li class="list-item portfolio">
+              <a class="link portfolio" href="button">
                 <img
                   src="./images/portfolio/img-all-7.jpg"
                   alt="11111"
@@ -159,8 +159,8 @@
                 <p class="portfolio-text">Дизайн</p>
               </a>
             </li>
-            <li>
-              <a class="link" href="button">
+            <li class="list-item portfolio">
+              <a class="link portfolio" href="button">
                 <img
                   src="./images/portfolio/img-all-8.jpg"
                   alt="11111"
@@ -171,8 +171,8 @@
                 <p class="portfolio-text">Маркетинг</p>
               </a>
             </li>
-            <li>
-              <a class="link" href="button">
+            <li class="list-item portfolio">
+              <a class="link portfolio" href="button">
                 <img
                   src="./images/portfolio/img-all-9.jpg"
                   alt="11111"
